--- a/css/styles.css
+++ b/css/styles.css
@@ -19,10 +19,23 @@ body {
 }
 
 .container {
-  width: 1158px;
-  padding: 0 15px;
-  margin: 0 auto;
-  /*outline: 2px solid red;*/
+  max-width: 428px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1158px;
+  }
 }
 
 .list {
@@ -54,11 +67,27 @@ img {
 .header-page.portfolio {
   border-bottom: 1px solid var(--button-hover-color);
 }
-
-.heder-container {
-  display: flex;
-  align-items: center;
-  gap: 40px;
+@media screen and (max-width: 767px) {
+  .heder-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .heder-container {
+    display: flex;
+    align-items: flex-end;
+    gap: 120px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .heder-container {
+    align-items: center;
+    gap: 40px;
+  }
 }
 
 /*logo*/
@@ -80,99 +109,376 @@ img {
 
 /*nav*/
 
-.nav-menu {
-  display: flex;
-  gap: 40px;
-}
-.nav-items {
-  display: flex;
-  align-items: center;
-  flex-grow: 1;
-  gap: 70px;
+@media screen and (max-width: 767px) {
+  .icon-burger {
+    stroke: var(--color-general);
+    display: block;
+  }
 }
 
-.nav-link {
-  display: block;
-  padding-top: 24px;
-  padding-bottom: 24px;
+@media screen and (max-width: 767px) {
+  .btn-mobile {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
 
-  font-weight: 500;
-  text-decoration: none;
-  letter-spacing: 0.02em;
-  line-height: 1.2;
-
-  color: var(--color-general);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--button-color);
+    width: 40px;
+    height: 40px;
+  }
 }
 
-.nav-link.current {
-  position: relative;
-  color: var(--button-color);
+@media screen and (min-width: 768px) {
+  .icon-burger {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .btn-mobile {
+    display: none;
+  }
 }
 
-.nav-link.current::after {
-  position: absolute;
-  display: block;
-  content: "";
-  height: 4px;
-  bottom: 0;
+@media screen and (min-width: 768px) {
+  .nav-items {
+    display: flex;
+    align-items: center;
 
-  width: 100%;
-  background-color: var(--btn-color-herro-hover);
-  border-radius: 2px;
+    gap: 120px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .nav-items {
+    align-items: center;
+    flex-grow: 1;
+    gap: 70px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .nav-menu {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav-menu {
+    display: flex;
+    gap: 40px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav-link {
+    display: block;
+    padding-top: 24px;
+    padding-bottom: 24px;
+
+    font-weight: 500;
+    text-decoration: none;
+    letter-spacing: 0.02em;
+    line-height: 1.2;
+
+    color: var(--color-general);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav-link:hover,
+  .nav-link:focus {
+    color: var(--button-color);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav-link.current {
+    position: relative;
+    color: var(--button-color);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav-link.current::after {
+    position: absolute;
+    display: block;
+    content: "";
+    height: 4px;
+    bottom: 0;
+
+    width: 100%;
+    background-color: var(--btn-color-herro-hover);
+    border-radius: 2px;
+  }
 }
 
 /*address*/
 
-.contact-menu {
-  display: flex;
-  gap: 40px;
+@media screen and (max-width: 767px) {
+  .address {
+    display: none;
+  }
 }
 
-.contact-link {
-  padding-bottom: 24px;
-  padding-top: 24px;
+@media screen and (min-width: 768px) {
+  .contact-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+  }
+}
 
-  font-weight: 400;
+@media screen and (min-width: 1200px) {
+  .contact-menu {
+    flex-direction: row;
+    gap: 40px;
+  }
+}
 
-  line-height: 1.5px;
+@media screen and (min-width: 768px) {
+  .contact-link {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.5px;
 
+    text-decoration: none;
+    font-style: normal;
+
+    color: var(--color-additional);
+
+    transition: color 250ms cubic-bezier;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact-link {
+    padding-bottom: 24px;
+    padding-top: 24px;
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact-link:hover,
+  .contact-link:focus {
+    color: var(--button-color);
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .mob-box {
+    display: none;
+  }
+}
+
+.mob-box {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  max-height: 796px;
+  top: 0;
+  left: 0;
+  z-index: 10;
+
+  background-color: var(--title-text-color);
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-box.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.mob-menu {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 80px 40px 40px 40px;
+  display: flex;
+  margin: 0 auto;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.nav-link-mobil {
+  display: inline-block;
+  padding: 20px 0px;
+  font-size: 36px;
+
+  font-weight: 700;
   text-decoration: none;
-  font-style: normal;
+  letter-spacing: 0.02em;
+  line-height: 1.11;
 
-  color: var(--color-additional);
-
+  color: var(--color-general);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contact-link:hover,
-.contact-link:focus {
+.nav-link-mobil.current {
+  position: relative;
+  color: var(--button-color);
+}
+.nav-link-mobil:hover,
+.nav-link-mobil:focus {
   color: var(--button-color);
 }
 
-/*hero*/
-.hero {
-  max-width: 1440px;
-  height: 600px;
-  margin: 0 auto;
+.btn-mobil-close {
+  position: absolute;
 
+  cursor: pointer;
+
+  top: 40px;
+  right: 40px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #000000;
+  height: 24px;
+  width: 24px;
+  border-radius: 50%;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-close-mob {
+  fill: currentColor;
+}
+
+.btn-mobil-close:focus {
+  background-color: var(--btn-color-herro-hover);
+  color: var(--title-text-color);
+}
+
+.icon-close-mob:focus {
+  fill: currentColor;
+}
+
+.contact-link-mobil.tel {
+  display: inline-block;
+  padding-bottom: 40px;
+  padding-top: 40px;
+  font-size: 36px;
+  line-height: 1.11;
+  text-decoration: none;
+  font-style: normal;
+  color: var(--color-general);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-link-mobil.mail {
+  display: inline-block;
+  padding-bottom: 48px;
+
+  text-decoration: none;
+  font-style: normal;
+  color: var(--color-general);
+  font-size: 20px;
+  line-height: 1.2;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-link-mobil:focus {
+  color: var(--btn-color-herro-hover);
+}
+
+.socials-list-mob {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 56px;
+}
+
+/*hero*/
+
+.hero {
+  height: 432px;
+
+  padding-top: 112px;
+  padding-bottom: 112px;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/bgimg.jpg);
+    url(../images/bgmobil.jpg);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center top;
   background-size: cover;
 
   background-color: var(--color-general);
   text-align: center;
-  padding-top: 188px;
-  padding-bottom: 188px;
 }
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/bgmobil@2x.jpg);
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/bgtablet.jpg);
+    height: 436px;
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+  screen and (min-width: 768px) and (min-resolution: 192dpi),
+  screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/bgtablet@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-position: center top 70%;
+    height: 600px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/bgimg.jpg);
+
+    padding-top: 188px;
+    padding-bottom: 188px;
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+  screen and (min-width: 1200px) and (min-resolution: 192dpi),
+  screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/bgimg@2x.jpg);
+  }
+}
+
 .hero-title {
   font-size: 56px;
   line-height: 1.07;
@@ -181,6 +487,32 @@ img {
   margin: 0 auto 48px;
   max-width: 496px;
 }
+
+.hero-title {
+  font-size: 36px;
+  line-height: 1.11;
+  color: var(--title-text-color);
+
+  margin: 0 auto 72px;
+  max-width: 320px;
+}
+
+@media screen and (min-width: 768px) {
+  .hero-title {
+    font-size: 56px;
+    line-height: 1.07;
+    color: var(--title-text-color);
+
+    margin: 0 auto 36px;
+    max-width: 496px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero-title {
+    margin: 0 auto 48px;
+  }
+}
+
 .hero-button {
   display: inline-block;
   border-radius: 4px;
@@ -212,8 +544,15 @@ img {
   padding-top: 0px;
 }
 .section {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 }
 .section-title {
   margin-top: 0;
@@ -222,12 +561,22 @@ img {
   text-align: center;
   line-height: 1.11;
 }
+
 .section-subtitle {
   margin-top: 0;
   margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+}
+@media screen and (max-width: 1199px) {
+  .title-mobil {
+    margin-top: 0;
+    margin-bottom: 8px;
+    font-size: 36px;
+    text-align: center;
+    line-height: 1.11;
+  }
 }
 .section-text {
   color: var(--color-additional);
@@ -236,26 +585,51 @@ img {
 }
 .section-items {
   display: flex;
-  gap: 24px;
+  gap: 72px;
   flex-wrap: wrap;
 }
+
+@media screen and (min-width: 768px) {
+  .section-items {
+    gap: 64px 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section-items {
+    gap: 24px;
+  }
+}
+
 /*Benefits */
 
-.benefits-item {
-  flex-basis: calc((100% - 72px) / 4);
+@media screen and (min-width: 768px) {
+  .benefits-item {
+    flex-basis: calc((100% - 24px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .benefits-item {
+    flex-basis: calc((100% - 72px) / 4);
+  }
 }
 
 /*.benefits-item*/
-
 .icon-container {
-  display: flex;
-  height: 112px;
-  background-color: var(--accent-color);
-  border-radius: 4px;
-  justify-content: center;
-  align-items: center;
+  display: none;
+}
 
-  margin-bottom: 8px;
+@media screen and (min-width: 1200px) {
+  .icon-container {
+    display: flex;
+    height: 112px;
+    background-color: var(--accent-color);
+    border-radius: 4px;
+    justify-content: center;
+    align-items: center;
+
+    margin-bottom: 8px;
+  }
 }
 
 /*services*/
@@ -263,20 +637,43 @@ img {
 .services-item {
   flex-basis: calc((100% - 48px) / 3);
 }
+@media screen and (max-width: 1199px) {
+  .container-hide {
+    display: none;
+  }
+}
 
 /*team*/
 .section.team {
   background-color: var(--accent-color);
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .more-padding {
+    padding-left: 108px;
+    padding-right: 108px;
+  }
+}
+
 .team-item {
-  flex-basis: calc((100% - 72px) / 4);
   background-color: var(--title-text-color);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
+  width: 100%;
+  max-width: 264px;
+  margin: 0 auto;
 }
-
+@media screen and (min-width: 768px) {
+  .team-item {
+    flex-basis: calc((100% - 24px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-item {
+    flex-basis: calc((100% - 72px) / 4);
+  }
+}
 .team-card {
   text-align: center;
   padding-top: 32px;
@@ -313,12 +710,37 @@ img {
   fill: currentColor;
 }
 
-/*company*/
+@media screen and (max-width: 767px) {
+  .company-items {
+    gap: 72px 16px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .company-items {
+    gap: 72px 24px;
+  }
+}
 
 .company {
-  width: 168px;
+  width: 100%;
+  max-width: 190px;
   height: 88px;
-  flex-basis: calc((100% - 120px) / 6);
+  flex-basis: calc((100% - 16px) / 2);
+}
+
+@media screen and (min-width: 768px) {
+  .company {
+    max-width: 168px;
+
+    flex-basis: calc((100% - 48px) / 3);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .company {
+    flex-basis: calc((100% - 120px) / 6);
+  }
 }
 
 .company-link {
@@ -449,25 +871,49 @@ img {
 
 /*footer*/
 .footer-page {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 96px;
+  padding-bottom: 96px;
   background-color: var(--color-general);
 }
-.footer-box {
-  margin-right: 120px;
+@media screen and (min-width: 1200px) {
+  .footer-page {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-color: var(--color-general);
+  }
 }
 
+@media screen and (max-width: 767px) {
+  .footer-box {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-box {
+    margin-right: 24px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-box {
+    margin-right: 120px;
+  }
+}
 .footer-page .logo {
   margin-bottom: 16px;
 }
 .footer-logo-color {
   color: var(--title-text-color);
 }
+
 .footer-text {
   color: var(--accent-color);
-  margin-top: 0;
+  margin: 0;
   max-width: 264px;
+  text-align: left;
 }
+
 .subtitle-footer {
   color: var(--title-text-color);
   margin-top: 0;
@@ -475,19 +921,50 @@ img {
   font-weight: 500;
   font-size: 16px;
 }
-.container.footer {
-  display: flex;
-  align-items: flex-start;
+
+@media screen and (max-width: 767px) {
+  .container.footer {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 72px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container.footer {
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container.footer {
+    flex-wrap: nowrap;
+  }
 }
 
 .icon-box {
-  margin-right: 80px;
 }
 
-.socials-footer {
-  display: flex;
-  gap: 16px;
-  justify-content: center;
+@media screen and (min-width: 1200px) {
+  .icon-box {
+    margin-right: 80px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .socials-footer {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .socials-footer {
+    display: flex;
+    gap: 16px;
+  }
 }
 
 .social-item-footer {
@@ -516,14 +993,33 @@ img {
   background-color: #31d0aa;
 }
 
-.form-box {
-  display: flex;
-  gap: 24px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-form-box {
+    margin-top: 72px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .form-box {
+    display: flex;
+    gap: 16px;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .form-box {
+    display: flex;
+    gap: 24px;
+  }
 }
 
 .form-box input {
   border: none;
-  width: 264px;
+  width: 100%;
+  max-width: 398px;
+
   height: 40px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -534,6 +1030,12 @@ img {
   background-color: transparent;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 768px) {
+  .form-box input {
+    width: 264px;
+  }
+}
+
 .form-box input:focus {
   border: 1px solid var(--btn-color-herro-hover);
 }
@@ -584,6 +1086,7 @@ img {
   width: 100%;
   height: 100%;
   background: rgba(46, 47, 66, 0.4);
+  overflow-y: scroll;
 
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -591,19 +1094,26 @@ img {
 }
 
 .modal {
-  padding: 72px 24px 24px 24px;
+  padding: 72px 16px 24px 16px;
   position: absolute;
-  overflow: auto;
+
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 
-  min-width: 408px;
-  min-height: 584px;
+  width: 100%;
+  max-width: 392px;
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    min-width: 408px;
+    min-height: 584px;
+    padding: 72px 24px 24px 24px;
+  }
 }
 
 .backdrop.is-hidden {
@@ -664,7 +1174,8 @@ img {
 .form-item input {
   background-color: transparent;
   border: none;
-  width: 360px;
+  width: 100%;
+  max-width: 360px;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -672,6 +1183,7 @@ img {
   outline: none;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .form-item input:focus {
   border: 1px solid var(--btn-color-herro-hover);
 }
@@ -707,14 +1219,15 @@ img {
 }
 
 .form-item.coment::placeholder {
-  color: rgba(117, 117, 117, 0.5);
+  color: #8e8f99;
   line-height: 1.3;
 }
 .form-item.coment textarea {
   background-color: transparent;
   resize: none;
   border: none;
-  width: 360px;
+  width: 100%;
+  max-width: 360px;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -737,7 +1250,7 @@ img {
 }
 
 .icon-check {
-  width: 16px;
+  min-width: 16px;
   height: 16px;
   border: 1.25px solid #2e2f42;
   border-radius: 2px;
