--- a/css/styles.css
+++ b/css/styles.css
@@ -121,9 +121,7 @@ img {
     border: none;
     background-color: transparent;
     cursor: pointer;
-
-    width: 40px;
-    height: 40px;
+    padding: 0;
   }
 }
 
@@ -333,8 +331,8 @@ img {
 
   cursor: pointer;
 
-  top: 40px;
-  right: 40px;
+  top: 24px;
+  right: 24px;
 
   display: flex;
   justify-content: center;
@@ -403,6 +401,10 @@ img {
 /*hero*/
 
 .hero {
+  width: 100%;
+  max-width: 428px;
+  margin-left: auto;
+  margin-right: auto;
   height: 432px;
 
   padding-top: 112px;
@@ -413,7 +415,7 @@ img {
     ),
     url(../images/bgmobil.jpg);
   background-repeat: no-repeat;
-  background-position: center top;
+  background-position: center;
   background-size: cover;
 
   background-color: var(--color-general);
@@ -432,6 +434,8 @@ img {
 }
 @media screen and (min-width: 768px) {
   .hero {
+    max-width: 768px;
+
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
@@ -455,7 +459,8 @@ img {
 
 @media screen and (min-width: 1200px) {
   .hero {
-    background-position: center top 70%;
+    max-width: 1158px;
+
     height: 600px;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
@@ -666,7 +671,6 @@ img {
 }
 @media screen and (min-width: 768px) {
   .team-item {
-    margin: 0;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -767,13 +771,38 @@ img {
 /*portfolio*/
 
 .section.portfolio {
-  padding-top: 96px;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+@media screen and (min-width: 768px) {
+  .section.portfolio {
+    padding-top: 64px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section.portfolio {
+    padding-top: 96px;
+  }
 }
 .items-btn {
   display: flex;
   gap: 24px;
-  margin-bottom: 72px;
-  justify-content: center;
+  margin-bottom: 48px;
+  flex-wrap: wrap;
+}
+@media screen and (min-width: 768px) {
+  .items-btn {
+    margin-bottom: 64px;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .items-btn {
+    margin-bottom: 72px;
+  }
 }
 .portfolio-btn {
   border-radius: 4px;
@@ -807,10 +836,29 @@ img {
 .portfolio-items {
   display: flex;
   flex-wrap: wrap;
-  gap: 48px 24px;
+  gap: 24px;
+}
+@media screen and (min-width: 768px) {
+  .portfolio-items {
+    gap: 72px 24px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-items {
+    gap: 48px 24px;
+  }
 }
 .portfolio-panel {
-  flex-basis: calc((100% - 48px) / 3);
+}
+@media screen and (min-width: 768px) {
+  .portfolio-panel {
+    flex-basis: calc((100% - 24px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-panel {
+    flex-basis: calc((100% - 48px) / 3);
+  }
 }
 .portfolio-link {
   display: block;
@@ -941,9 +989,6 @@ img {
   .container.footer {
     flex-wrap: nowrap;
   }
-}
-
-.icon-box {
 }
 
 @media screen and (min-width: 1200px) {
